--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -18,7 +18,7 @@ log4j.appender.socket.locationInfo=true
 
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
-log4j.rootLogger=debug, stdout
+log4j.rootLogger=warn, stdout
 
 #log4j.logger.org.hibernate.jpamodelgen.test.util.CompilationTest=trace
 
