--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'maven-publish'
+apply plugin: 'maven-publish-auth'
 apply plugin: 'jdocbook'
 
 task wrapper(type: Wrapper) {
@@ -10,7 +12,8 @@ task wrapper(type: Wrapper) {
 // Define some project settings
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 project.buildDir = 'target'
-project.version  = '1.2.0-SNAPSHOT'
+project.group = 'org.hibernate' 
+project.version  = '1.4.0-SNAPSHOT'
 
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Define repostories for the build script
@@ -22,6 +25,7 @@ buildscript {
       mavenRepo name: 'jboss-nexus', url: "http://repository.jboss.org/nexus/content/groups/public/"
   }
   dependencies {
+      classpath 'org.hibernate.build.gradle:gradle-maven-publish-auth:2.0.1'
       classpath "org.jboss.jdocbook:gradle-jdocbook:1.2.1"
   }
 }
@@ -42,19 +46,23 @@ ext {
     slf4jVersion = '1.7.5'
     pressgangVersion = '3.0.0'
     libraries = [
-        // compile time deps
-        jpa_api:         "org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.0.Final",
-
         // test libraries
-        testng:          "org.testng:testng:6.1",
-	    slf4j_api:       "org.slf4j:slf4j-api:${slf4jVersion}",
-	    slf4j_log4j:     "org.slf4j:slf4j-log4j12:${slf4jVersion}",
-	    hibernate:       "org.hibernate:hibernate-core:3.6.0.Beta1",
+        testng:                    "org.testng:testng:6.1",
+        hibernate:                 "org.hibernate:hibernate-core:3.6.0.Beta1",
+        jpa_api:                   "org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.0.Final",
+	    slf4j_api:                 "org.slf4j:slf4j-api:${slf4jVersion}",
+	    slf4j_log4j:               "org.slf4j:slf4j-log4j12:${slf4jVersion}",
 
         // jaxb task
-        jaxb:            "com.sun.xml.bind:jaxb-xjc:2.1.6",
-        jaxb2_basics:    "org.jvnet.jaxb2_commons:jaxb2-basics:0.6.0",
-        jaxb2_ant:       "org.jvnet.jaxb2_commons:jaxb2-basics-ant:0.6.0"
+        jaxb:                      "com.sun.xml.bind:jaxb-xjc:2.1.6",
+        jaxb2_basics:              "org.jvnet.jaxb2_commons:jaxb2-basics:0.6.0",
+        jaxb2_ant:                 "org.jvnet.jaxb2_commons:jaxb2-basics-ant:0.6.0",
+
+        // docbook libraries
+        pressgang_xslt:            "org.jboss.pressgang:pressgang-xslt-ns:${pressgangVersion}",
+        pressgang_fonts:           "org.jboss.pressgang:pressgang-fonts:${pressgangVersion}",
+        hibernate_docbook_style:   "org.hibernate:hibernate-jdocbook-style:2.0.1",
+        jboss_docbook_style:       "org.jboss.pressgang:pressgang-jdocbook-style:${pressgangVersion}"
     ]
 }
 
@@ -70,12 +78,11 @@ configurations.jaxb {
 // Prepare the different dependencies per configuration
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 dependencies {
-	compile     libraries.jpa_api
-	
 	testCompile libraries.testng
+    testCompile libraries.jpa_api
+    testCompile libraries.hibernate
 	testCompile libraries.slf4j_api
 	testCompile libraries.slf4j_log4j
-	testCompile libraries.hibernate
 
 	jaxb        libraries.jaxb
     jaxb        libraries.jaxb2_basics
@@ -162,10 +169,10 @@ jdocbook {
     }
 
     dependencies {   
-        jdocbookXsl      "org.jboss.pressgang:pressgang-xslt-ns:${pressgangVersion}"
-        jdocbookXsl      "org.jboss.pressgang:pressgang-fonts:${pressgangVersion}"
-        jdocbookStyles   "org.hibernate:hibernate-jdocbook-style:2.0.1"
-        jdocbookStyles   "org.jboss.pressgang:pressgang-jdocbook-style:${pressgangVersion}"
+        jdocbookXsl      libraries.pressgang_xslt
+        jdocbookXsl      libraries.pressgang_fonts
+        jdocbookStyles   libraries.hibernate_docbook_style
+        jdocbookStyles   libraries.jboss_docbook_style
     }
 
     manual {
@@ -186,62 +193,78 @@ stageStyles_manual.doLast {
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Maven POM generation
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-def pomConfig =  {
-        groupId 'org.hibernate'
-        artifactId 'hibernate-jpamodelgen'
-		inceptionYear '2009'
-		name 'Hibernate JPA 2 Metamodel Generator'
-		description 'Annotation Processor to generate JPA 2 static metamodel classes'
-		url 'http://hibernate.org'
-		organization {
-        	name 'Hibernate.org'
-        	url 'http://hibernate.org'
-    	}
-    	issueManagement {
-        	system 'jira'
-        	url 'http://opensource.atlassian.com/projects/hibernate/browse/METAGEN'
-    	}
-    	scm {
-        	url 'http://github.com/hibernate/hibernate-metamodelgen'
-        	connection 'scm:git:git://github.com/hibernate/hibernate-metamodelgen.git'
-        	developerConnection 'scm:git:git@github.com:hibernate/hibernate-metamodelgen.git'
-    	}
-    	licenses {
-        	license {
-            	name 'Apache License, Version 2.0'
-            	url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-        	}
-    	}
-    	developers {
-       		developer {
-            	id 'hibernate-team'
-            	name 'The Hibernate Development Team'
-            	organization 'Hibernate.org'
-            	organizationUrl 'http://hibernate.org'
-        	}
-		}
-    }
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
 
-// elements used to customize the generated POM 
-configure(install.repositories.mavenInstaller) {
-	pom.project pomConfig
+            artifact sourcesJar {
+                classifier "sources"
+            }
+
+            pom.withXml {
+                // append additional metadata
+                asNode().children().last() + {
+                    resolveStrategy = Closure.DELEGATE_FIRST
+
+                    inceptionYear '2009'
+                    name 'Hibernate JPA 2 Metamodel Generator'
+                    description 'Annotation Processor to generate JPA 2 static metamodel classes'
+                    url 'http://hibernate.org'
+                    organization {
+                        name 'Hibernate.org'
+                        url 'http://hibernate.org'
+                    }
+                    issueManagement {
+                        system 'jira'
+                        url 'http://opensource.atlassian.com/projects/hibernate/browse/METAGEN'
+                    }
+                    scm {
+                        url 'http://github.com/hibernate/hibernate-metamodelgen'
+                        connection 'scm:git:git://github.com/hibernate/hibernate-metamodelgen.git'
+                        developerConnection 'scm:git:git@github.com:hibernate/hibernate-metamodelgen.git'
+                    }
+                    licenses {
+                        license {
+                            name 'Apache License, Version 2.0'
+                            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+                    developers {
+                        developer {
+                            id 'hibernate-team'
+                            name 'The Hibernate Development Team'
+                            organization 'Hibernate.org'
+                            organizationUrl 'http://hibernate.org'
+                        }
+                    }
+                }
+            }
+        }
+
+        repositories {
+            maven {
+                if ( project.version.endsWith( 'SNAPSHOT' ) ) {
+                    name 'jboss-snapshots-repository'
+                    url 'https://repository.jboss.org/nexus/content/repositories/snapshots'
+                }
+                else {
+                    name 'jboss-releases-repository'
+                    url 'https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/'
+                }
+            }
+        }
+
+        generatePomFileForMavenJavaPublication {
+            destination = file("$buildDir/generated-pom.xml")
+        }
+    }
 }
 
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Artifact deploy
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-uploadArchives {
-    repositories.mavenDeployer {
-        name = 'jbossDeployer'
-        pom.project pomConfig
-        repository(id: "jboss-releases-repository", url: "https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/") {
-        	authentication(userName: "hardy.ferentschik", password: "***")
-        }
-        snapshotRepository(id: "jboss-snapshots-repository", url: "https://repository.jboss.org/nexus/content/repositories/snapshots") {
-        	authentication(userName: "hardy.ferentschik", password: "***")
-        }
-    }   
-}
+
 
 task sourcesJar(type: Jar, dependsOn: compileJava) {
 	from sourceSets.main.allSource
